dropdown issues for iphone and androide fixed, also fixed IE overflow issue

--- a/front-end/Assets/src/css/pages/_careers.scss
+++ b/front-end/Assets/src/css/pages/_careers.scss
@@ -144,7 +144,7 @@
 			}
 		
 			.product-category-header{
-				overflow: initial;
+				overflow: visible;
 				z-index: 10;
 				.inner{
 					.bannerContent{
